-Added helper methods for getting the first and last name of any user; also enabled some alert messages for debugging

--- a/LMS_handout/LMS/Views/Student/Catalog.cshtml
+++ b/LMS_handout/LMS/Views/Student/Catalog.cshtml
@@ -92,7 +92,7 @@
         url: '@Url.Action("GetCatalog", "Student")',
         dataType: 'json',
         success: function (data, status) {
-          //alert(JSON.stringify(data));
+          alert(JSON.stringify(data));
           $.each(data, function (i, item) {
             var newDiv = MakeDepartmentTable();
             SetDepartmentName(newDiv, item.subject + ": " + item.dname);
