Added more unit tests

--- a/LMS_handout/LMS/Views/Administrator/Index.cshtml
+++ b/LMS_handout/LMS/Views/Administrator/Index.cshtml
@@ -53,7 +53,7 @@
 
           PopulateList(lst, data);
 
-          //alert(JSON.stringify(data));
+          alert(JSON.stringify(data));
           
         },
         error: function (ex) {
