--- a/LMS_handout/LMS/Views/Administrator/Course.cshtml
+++ b/LMS_handout/LMS/Views/Administrator/Course.cshtml
@@ -116,7 +116,7 @@
           instructor: prof
           },
         success: function (data, status) {
-          //alert(JSON.stringify(data));
+          alert(JSON.stringify(data));
           if (!data.success) {
             alert("Unable to add class");
           }
