Fixed "undefined" issue on a student's "Major" text field

--- a/LMS_handout/LMS/Views/Student/ClassListings.cshtml
+++ b/LMS_handout/LMS/Views/Student/ClassListings.cshtml
@@ -129,7 +129,7 @@
 
           PopulateTable(tbl, data);
 
-          //alert(JSON.stringify(data));
+          alert(JSON.stringify(data));
           
         },
         error: function (ex) {
