--- a/LMS_handout/LMS/Views/Administrator/Department.cshtml
+++ b/LMS_handout/LMS/Views/Administrator/Department.cshtml
@@ -130,7 +130,7 @@
           subject: '@ViewData["subject"]'
         },
           success: function (data, status) {
-            //alert(JSON.stringify(data));
+            alert(JSON.stringify(data));
             PopulateTable(tbl, data);
           },
           error: function (ex) {
