--- a/LMS_handout/LMS/Views/Professor/Categories.cshtml
+++ b/LMS_handout/LMS/Views/Professor/Categories.cshtml
@@ -144,7 +144,7 @@
           category: catName,
           catweight: catWeight},
         success: function (data, status) {
-          //alert(JSON.stringify(data));
+          alert(JSON.stringify(data));
           if (!data.success) {
             alert("Unable to add category");
           }
@@ -206,7 +206,7 @@
           season: '@ViewData["season"]',
           year: Number('@ViewData["year"]')},
         success: function (data, status) {
-          //alert(JSON.stringify(data));
+          alert(JSON.stringify(data));
           PopulateTable(tbl, data);
         },
         error: function (ex) {
