--- a/LMS_handout/LMS/Views/Student/Index.cshtml
+++ b/LMS_handout/LMS/Views/Student/Index.cshtml
@@ -88,7 +88,7 @@
         data: { uid: '@User.Identity.Name' },
         success: function (data, status) {
 
-          alert(JSON.stringify(data));
+          //alert(JSON.stringify(data));
 
           $.each(data, function (i, item) {
 
