--- a/LMS_handout/LMS/Views/Professor/Categories.cshtml
+++ b/LMS_handout/LMS/Views/Professor/Categories.cshtml
@@ -206,7 +206,7 @@
           season: '@ViewData["season"]',
           year: Number('@ViewData["year"]')},
         success: function (data, status) {
-          alert(JSON.stringify(data));
+          //alert(JSON.stringify(data));
           PopulateTable(tbl, data);
         },
         error: function (ex) {
