removed more JS alerts

--- a/LMS_handout/LMS/Views/Administrator/Department.cshtml
+++ b/LMS_handout/LMS/Views/Administrator/Department.cshtml
@@ -72,7 +72,7 @@
           number: corNum,
           name: corName},
         success: function (data, status) {
-          alert(JSON.stringify(data));
+          //alert(JSON.stringify(data));
           if (!data.success) {
             alert("Unable to add course");
           }
