--- a/LMS_handout/LMS/Views/Student/ClassListings.cshtml
+++ b/LMS_handout/LMS/Views/Student/ClassListings.cshtml
@@ -51,7 +51,7 @@
           uid: '@User.Identity.Name',
           },
         success: function (data, status) {
-          alert(JSON.stringify(data));
+          //alert(JSON.stringify(data));
           if (data.success == undefined) {
             alert("Unknown response from controller");
           }
@@ -129,7 +129,7 @@
 
           PopulateTable(tbl, data);
 
-          alert(JSON.stringify(data));
+          //alert(JSON.stringify(data));
           
         },
         error: function (ex) {
