--- a/LMS_handout/LMS/Views/Administrator/Course.cshtml
+++ b/LMS_handout/LMS/Views/Administrator/Course.cshtml
@@ -194,7 +194,7 @@
           number: Number('@ViewData["num"]')
         },
           success: function (data, status) {
-            alert(JSON.stringify(data));
+            //alert(JSON.stringify(data));
             PopulateTable(tbl, data);
           },
           error: function (ex) {
@@ -215,7 +215,7 @@
           subject: '@ViewData["subject"]'
         },
           success: function (data, status) {
-            alert(JSON.stringify(data));
+            //alert(JSON.stringify(data));
             PopulateInstructors(selector, data);
           },
           error: function (ex) {
